
Devel version (1.1)
+ Use numerically stable algorithms for sum, mean, and variance
+ Implement dedicated function for rowSums2

Changes in version 1.0.1 (2020-05-08)
+ Fix bugs in colMaxs, colMins, colAnys
+ Fix bug in colLogSumExps


Changes in version 0.0.99 (2020-04-03)
+ Submitted to Bioconductor