@@ -1,7 +1,8 @@
 
 Devel version (1.1)
 + Use numerically stable algorithms for sum, mean, and variance
-+ Implement dedicated function for rowSums2
++ Implement dedicated function for rowSums2, rowMeans2, rowVars
+ which avoid transposing the input matrix to call the colXXX version
 
 Changes in version 1.0.1 (2020-05-08)
 + Fix bugs in colMaxs, colMins, colAnys
